modify front end files

--- a/index.html
+++ b/index.html
@@ -1,24 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <!-- CDN Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>todo list</title>
-</head>
-<body>
-    
-    
-    <h1>to<span>do</span></h1>
-    <div class="todo">
-        <input type="text" id="input" class="input" placeholder="Que quieres hacer?">
-        <div class="tasks">
-            <div class="task">lkajsldfjas</div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles.css" />
+        <!-- CDN Awesome -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+            integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <title>todo list</title>
+    </head>
+    <body>
+        <h1>to<span>do</span></h1>
+        <div class="todo">
+            <div class="container">
+                <div class="theinput">
+                    <input
+                        type="text"
+                        id="input"
+                        class="input"
+                        placeholder="Que quieres hacer?"
+                    />
+                    <button class="btn" id="btn">add</button>
+                </div>
+                <div class="tasks" id="tasks">
+                    <div class="task">lkajsldfjas</div>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <script src="script.js"></script>
-</body>
+        <script src="script.js"></script>
+    </body>
 </html>
